--- a/client/src/styles/VerifyOtp.css
+++ b/client/src/styles/VerifyOtp.css
@@ -4,7 +4,6 @@
   justify-content: center;
   align-items: center;
 
-  background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
   padding: 2rem;
 }
 
@@ -14,7 +13,7 @@
   padding: 2.5rem;
   border-radius: 20px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-  border: 1px solid rgba(159, 28, 51, 0.1);
+  border: 1px solid #ddd;
   position: relative;
 }
 
@@ -22,7 +21,15 @@
   width: 100%;
   height: 100%;
 }
-
+.logo {
+  width: 350px;
+  border: 1px solid #ddd;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px auto;
+}
 .university-name {
   color: #9f1c33;
   font-size: 1.8rem;
